@@ -1,0 +1,4 @@
+
+#ifndef global_plugin_name
+#define global_plugin_name "WavPack"
+#endif
